src/test/ui/associated-types/cache/project-fn-ret-contravariant.oneuse.stderr
error: compilation successful
  --> $DIR/project-fn-ret-contravariant.rs:60:1
   |
LL | fn main() { }
   | ^^^^^^^^^^^^^

error: aborting due to previous error

